--- a/.gitignore
+++ b/.gitignore
@@ -57,16 +57,22 @@ temp/*
 Thumbs.db
 ehthumbs.db
 
-# Package manager files
-uv.lock
-pip-log.txt
-
-# Test files and coverage
-.coverage
-.pytest_cache/
-htmlcov/
-
 # Temporary files
 *.tmp
 *.temp
 *.bak
+
+# Frontend / Node.js
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/.eslintcache
+
+# Package manager files
+uv.lock
+pip-log.txt
+package-lock.json
+yarn.lock
